Delete ShippingDetail Add Order model and Create OrderController

--- a/RentCar.Domain/RentCar.Domain.csproj
+++ b/RentCar.Domain/RentCar.Domain.csproj
@@ -75,23 +75,22 @@
     <Compile Include="Abstract\ICarRepository.cs" />
     <Compile Include="Abstract\ICategoryRepository.cs" />
     <Compile Include="Abstract\IFuelRepository.cs" />
+    <Compile Include="Abstract\IOrderRepository.cs" />
     <Compile Include="Abstract\ITransmissionRepository.cs" />
     <Compile Include="Abstract\ITypeBodyRepository.cs" />
-    <Compile Include="Abstract\IShippingDetailRepository.cs" />
     <Compile Include="Concrete\EFBrandRepository.cs" />
     <Compile Include="Concrete\EFCarRepository.cs" />
     <Compile Include="Concrete\EFCategoryRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFFuelRepository.cs" />
-    <Compile Include="Concrete\EFShippingDetail.cs" />
+    <Compile Include="Concrete\EFOrderRepository.cs" />
     <Compile Include="Concrete\EFTransmissionRepository.cs" />
     <Compile Include="Concrete\EFTypeBodyRepository.cs" />
     <Compile Include="Entities\Brand.cs" />
     <Compile Include="Entities\Car.cs" />
-    <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Fuel.cs" />
-    <Compile Include="Entities\ShippingDetail.cs" />
+    <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Transmission.cs" />
     <Compile Include="Entities\TypeBody.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
