--- a/RentCar.WebUI/RentCar.WebUI.csproj
+++ b/RentCar.WebUI/RentCar.WebUI.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\CarsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\FuelsController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\TransmissionsController.cs" />
     <Compile Include="Controllers\TypeBodiesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -220,6 +221,11 @@
     <Content Include="Views\Cars\Delete.cshtml" />
     <Content Include="Views\Cars\Edit.cshtml" />
     <Content Include="Views\Cars\Index.cshtml" />
+    <Content Include="Views\Orders\Create.cshtml" />
+    <Content Include="Views\Orders\Delete.cshtml" />
+    <Content Include="Views\Orders\Details.cshtml" />
+    <Content Include="Views\Orders\Edit.cshtml" />
+    <Content Include="Views\Orders\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
